Changed alignment of formula

--- a/Zusammenfassung fuer Sessionspruefung.tex
+++ b/Zusammenfassung fuer Sessionspruefung.tex
@@ -105,7 +105,7 @@ V(n,k)=\frac{n!}{(n-k)!}
 	P\left[\Omega\right] & = & P[A]+P\left[A^C\right]=1 \\
 	P[\emptyset] & = & 0 \\
 	P\left[B^C|A\right] & = & 1-P[B|A] \\
-	A\subseteq B\Rightarrow P[A] & \leq & P[B] \\
+	A\subseteq B & \Rightarrow & P[A] \leq P[B] \\
 \end{array}
 \]
 
